crates/adapters/btc-secp-sys/depend/secp256k1/include/secp256k1_musig.h


typedef struct {
    unsigned char data[197];
} dominterop_secp_v0_10_0_musig_keyagg_cache;
typedef struct {
    unsigned char data[132];
} dominterop_secp_v0_10_0_musig_secnonce;
typedef struct {
    unsigned char data[132];
} dominterop_secp_v0_10_0_musig_pubnonce;
typedef struct {
    unsigned char data[132];
} dominterop_secp_v0_10_0_musig_aggnonce;
typedef struct {
    unsigned char data[133];
} dominterop_secp_v0_10_0_musig_session;
typedef struct {
    unsigned char data[36];
} dominterop_secp_v0_10_0_musig_partial_sig;
SECP256K1_API int dominterop_secp_v0_10_0_musig_pubkey_agg(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_scratch_space *scratch,
    dominterop_secp_v0_10_0_xonly_pubkey *agg_pk,
    dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache,
    const dominterop_secp_v0_10_0_pubkey * const *pubkeys,
    size_t n_pubkeys
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(5);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_musig_pubkey_get(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_pubkey *agg_pk,
    const dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_musig_pubkey_xonly_tweak_add(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_pubkey *output_pubkey,
    dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache,
    const unsigned char *tweak32
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API int dominterop_secp_v0_10_0_musig_nonce_gen(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_secnonce *secnonce,
    dominterop_secp_v0_10_0_musig_pubnonce *pubnonce,
    const unsigned char *session_id32,
    const unsigned char *seckey,
    const dominterop_secp_v0_10_0_pubkey *pubkey,
    const unsigned char *msg32,
    const dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache,
    const unsigned char *extra_input32
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4) SECP256K1_ARG_NONNULL(6);
SECP256K1_API int dominterop_secp_v0_10_0_musig_nonce_agg(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_aggnonce  *aggnonce,
    const dominterop_secp_v0_10_0_musig_pubnonce * const *pubnonces,
    size_t n_pubnonces
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_musig_nonce_process(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_session *session,
    const dominterop_secp_v0_10_0_musig_aggnonce  *aggnonce,
    const unsigned char *msg32,
    const dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache,
    const dominterop_secp_v0_10_0_pubkey *adaptor
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4) SECP256K1_ARG_NONNULL(5);
SECP256K1_API int dominterop_secp_v0_10_0_musig_partial_sign(
    const dominterop_secp_v0_10_0_context *ctx,
    dominterop_secp_v0_10_0_musig_partial_sig *partial_sig,
    dominterop_secp_v0_10_0_musig_secnonce *secnonce,
    const dominterop_secp_v0_10_0_keypair *keypair,
    const dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache,
    const dominterop_secp_v0_10_0_musig_session *session
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4) SECP256K1_ARG_NONNULL(5) SECP256K1_ARG_NONNULL(6);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_musig_partial_sig_verify(
    const dominterop_secp_v0_10_0_context *ctx,
    const dominterop_secp_v0_10_0_musig_partial_sig *partial_sig,
    const dominterop_secp_v0_10_0_musig_pubnonce *pubnonce,
    const dominterop_secp_v0_10_0_pubkey *pubkey,
    const dominterop_secp_v0_10_0_musig_keyagg_cache *keyagg_cache,
    const dominterop_secp_v0_10_0_musig_session *session
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4) SECP256K1_ARG_NONNULL(5) SECP256K1_ARG_NONNULL(6);
SECP256K1_API int dominterop_secp_v0_10_0_musig_partial_sig_agg(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *sig64,
    const dominterop_secp_v0_10_0_musig_session *session,
    const dominterop_secp_v0_10_0_musig_partial_sig * const *partial_sigs,
    size_t n_sigs
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API int dominterop_secp_v0_10_0_musig_nonce_parity(
    const dominterop_secp_v0_10_0_context *ctx,
    int *nonce_parity,
    const dominterop_secp_v0_10_0_musig_session *session
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_musig_adapt(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *sig64,
    const unsigned char *pre_sig64,
    const unsigned char *sec_adaptor32,
    int nonce_parity
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int dominterop_secp_v0_10_0_musig_extract_adaptor(
    const dominterop_secp_v0_10_0_context *ctx,
    unsigned char *sec_adaptor32,
    const unsigned char *sig64,
    const unsigned char *pre_sig64,
    int nonce_parity
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);