crates/adapters/btc-secp-sys/src/lib.rs


    /// BIP327 key aggregation over an ORDERED pubkey array.
    #[link_name = "dominterop_secp_v0_10_0_musig_pubkey_agg"]
    pub fn secp256k1_musig_pubkey_agg(
        ctx: *const secp256k1_context,
        scratch: *mut c_void,
        agg_pk: *mut secp256k1_xonly_pubkey,
        keyagg_cache: *mut secp256k1_musig_keyagg_cache,
        pubkeys: *const *const secp256k1_pubkey,
        n_pubkeys: usize,
    ) -> c_int;

    /// Full (non-x-only) aggregate public key from a keyagg cache.
    #[link_name = "dominterop_secp_v0_10_0_musig_pubkey_get"]
    pub fn secp256k1_musig_pubkey_get(
        ctx: *const secp256k1_context,
        agg_pk: *mut secp256k1_pubkey,
        keyagg_cache: *const secp256k1_musig_keyagg_cache,
    ) -> c_int;

    /// X-only (Taproot) tweak of the aggregate key inside the cache.
    /// Returns 0 on overflow/infinity — the caller MUST fail closed and
    /// never reduce (Annex M M.2.2 step 7).
    #[link_name = "dominterop_secp_v0_10_0_musig_pubkey_xonly_tweak_add"]
    pub fn secp256k1_musig_pubkey_xonly_tweak_add(
        ctx: *const secp256k1_context,
        output_pubkey: *mut secp256k1_pubkey,
        keyagg_cache: *mut secp256k1_musig_keyagg_cache,
        tweak32: *const c_uchar,
    ) -> c_int;

    /// Nonce generation. `session_secrand32` is the one-shot secret
    /// randomness of Annex M M.6 — the caller owns its vault discipline.
    #[link_name = "dominterop_secp_v0_10_0_musig_nonce_gen"]
    pub fn secp256k1_musig_nonce_gen(
        ctx: *const secp256k1_context,
        secnonce: *mut secp256k1_musig_secnonce,
        pubnonce: *mut secp256k1_musig_pubnonce,
        session_secrand32: *const c_uchar,
        seckey: *const c_uchar,
        pubkey: *const secp256k1_pubkey,
        msg32: *const c_uchar,
        keyagg_cache: *const secp256k1_musig_keyagg_cache,
        extra_input32: *const c_uchar,
    ) -> c_int;

    /// Aggregates public nonces (roster order is the caller's law).
    #[link_name = "dominterop_secp_v0_10_0_musig_nonce_agg"]
    pub fn secp256k1_musig_nonce_agg(
        ctx: *const secp256k1_context,
        aggnonce: *mut secp256k1_musig_aggnonce,
        pubnonces: *const *const secp256k1_musig_pubnonce,
        n_pubnonces: usize,
    ) -> c_int;

    /// Computes the session; a non-NULL `adaptor` makes the aggregate a
    /// PRE-signature (Annex M M.4.2 step 2).
    #[link_name = "dominterop_secp_v0_10_0_musig_nonce_process"]
    pub fn secp256k1_musig_nonce_process(
        ctx: *const secp256k1_context,
        session: *mut secp256k1_musig_session,
        aggnonce: *const secp256k1_musig_aggnonce,
        msg32: *const c_uchar,
        keyagg_cache: *const secp256k1_musig_keyagg_cache,
        adaptor: *const secp256k1_pubkey,
    ) -> c_int;

    /// Produces a partial signature, zeroizing the secnonce (one-shot at
    /// the backend layer; the DURABLE one-shot lives in the vault).
    #[link_name = "dominterop_secp_v0_10_0_musig_partial_sign"]
    pub fn secp256k1_musig_partial_sign(
        ctx: *const secp256k1_context,
        partial_sig: *mut secp256k1_musig_partial_sig,
        secnonce: *mut secp256k1_musig_secnonce,
        keypair: *const secp256k1_keypair,
        keyagg_cache: *const secp256k1_musig_keyagg_cache,
        session: *const secp256k1_musig_session,
    ) -> c_int;

    /// Verifies one partial signature (mandatory for every partial,
    /// including our own — Annex M M.6.7).
    #[link_name = "dominterop_secp_v0_10_0_musig_partial_sig_verify"]
    pub fn secp256k1_musig_partial_sig_verify(
        ctx: *const secp256k1_context,
        partial_sig: *const secp256k1_musig_partial_sig,
        pubnonce: *const secp256k1_musig_pubnonce,
        pubkey: *const secp256k1_pubkey,
        keyagg_cache: *const secp256k1_musig_keyagg_cache,
        session: *const secp256k1_musig_session,
    ) -> c_int;

    /// Aggregates partials into a 64-byte (pre-)signature.
    #[link_name = "dominterop_secp_v0_10_0_musig_partial_sig_agg"]
    pub fn secp256k1_musig_partial_sig_agg(
        ctx: *const secp256k1_context,
        sig64: *mut c_uchar,
        session: *const secp256k1_musig_session,
        partial_sigs: *const *const secp256k1_musig_partial_sig,
        n_sigs: usize,
    ) -> c_int;

    /// Nonce parity of the session (Annex M M.4.2 step 3).
    #[link_name = "dominterop_secp_v0_10_0_musig_nonce_parity"]
    pub fn secp256k1_musig_nonce_parity(
        ctx: *const secp256k1_context,
        nonce_parity: *mut c_int,
        session: *const secp256k1_musig_session,
    ) -> c_int;

    /// Adapts a pre-signature with the secret adaptor.
    #[link_name = "dominterop_secp_v0_10_0_musig_adapt"]
    pub fn secp256k1_musig_adapt(
        ctx: *const secp256k1_context,
        sig64: *mut c_uchar,
        pre_sig64: *const c_uchar,
        sec_adaptor32: *const c_uchar,
        nonce_parity: c_int,
    ) -> c_int;

    /// Extracts the secret adaptor from (signature, pre-signature).
    #[link_name = "dominterop_secp_v0_10_0_musig_extract_adaptor"]
    pub fn secp256k1_musig_extract_adaptor(
        ctx: *const secp256k1_context,
        sec_adaptor32: *mut c_uchar,
        sig64: *const c_uchar,
        pre_sig64: *const c_uchar,
        nonce_parity: c_int,
    ) -> c_int;
}
